# libvips

./: meson.build  meson_options.txt
cplusplus/: meson.build
libvips/: meson.build
libvips/arithmetic/: complex.c
libvips/include/vips/: meson.build
libvips/iofuncs/: meson.build
